--- a/upEngine/upEngine.csproj
+++ b/upEngine/upEngine.csproj
@@ -53,8 +53,11 @@
   <ItemGroup>
     <Compile Include="Camera.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="GLSLShader.cs" />
+    <Compile Include="IShader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
