--- a/upEngine/upEngine.csproj
+++ b/upEngine/upEngine.csproj
@@ -57,6 +57,7 @@
     <Compile Include="IShader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShaderManager.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
