--- a/upEngine/upEngine.csproj
+++ b/upEngine/upEngine.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShaderManager.cs" />
+    <Compile Include="TerrainGen.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
